<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">GeekDroid</string>
    <string name="manage_tab_lbl">Manage DB</string>
    <string name="post_tab_lbl">Post Blog</string>
    <string name="post_submit">Submit Post</string>
    <string name="browse_tab_lbl">Browse Blogs</string>
    <string name="manage_create">Create Database</string>
    <string name="manage_create_desc">Opens the database if it has already been created, or creates a new one.</string>
    <string name="manage_populate">Populate Tables</string>
    <string name="manage_populate_desc">Adds some sample data to the table for testing purposes.</string>
    <string name="manage_drop">Drop Database</string>
    <string name="manage_drop_desc">Deletes all entries in the database.</string>
    <string name="browse_no_results">No results.</string>    
<string name="AboutText">
CSCI585 Homework 3 - Team 33\n
  Skyler Clark\n
  Nasr Husami\n
  Anirudh Rehki\n\n
Please use the buttons below to manage the database. To
make blog posts or to view other blog posts, please 
press the tabs at the top.
</string>    
</resources>
