
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/CreateButton" android:focusable="true" android:clickable="true" android:minHeight="?android:attr/listPreferredItemHeight" android:background="@android:drawable/list_selector_background" android:orientation="vertical">
<TextView android:text="@string/manage_create" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="fill_parent" android:focusable="true" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/list_font" android:gravity="center"></TextView>
<TextView android:text="@string/manage_create_desc" android:layout_height="wrap_content" android:id="@+id/TextView02" android:focusable="true" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/list_font" android:layout_marginBottom="5dp" android:layout_gravity="center" android:layout_width="wrap_content"></TextView>

</LinearLayout><View android:layout_weight="0" android:layout_marginLeft="6dip" android:background="?android:attr/listDivider" android:layout_height="1px" android:layout_width="fill_parent"></View><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:focusable="true" android:clickable="true" android:minHeight="?android:attr/listPreferredItemHeight" android:background="@android:drawable/list_selector_background" android:orientation="vertical" android:id="@+id/PopulateButton" android:layout_below="@+id/CreateButton">
<TextView android:text="@string/manage_populate" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="fill_parent" android:focusable="true" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/list_font" android:gravity="center"></TextView>
<TextView android:text="@string/manage_populate_desc" android:layout_height="wrap_content" android:id="@+id/TextView02" android:focusable="true" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/list_font" android:layout_marginBottom="5dp" android:layout_gravity="center" android:layout_width="wrap_content"></TextView>

</LinearLayout><View android:layout_weight="0" android:layout_marginLeft="6dip" android:background="?android:attr/listDivider" android:layout_height="1px" android:layout_width="fill_parent"></View><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:focusable="true" android:clickable="true" android:minHeight="?android:attr/listPreferredItemHeight" android:background="@android:drawable/list_selector_background" android:orientation="vertical" android:id="@+id/DropButton" android:layout_below="@+id/DropButton">
<TextView android:text="@string/manage_drop" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="fill_parent" android:focusable="true" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/list_font" android:gravity="center"></TextView>
<TextView android:text="@string/manage_drop_desc" android:layout_height="wrap_content" android:id="@+id/TextView02" android:focusable="true" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/list_font" android:layout_marginBottom="5dp" android:layout_gravity="center" android:layout_width="wrap_content"></TextView>

</LinearLayout><View android:layout_weight="0" android:layout_marginLeft="6dip" android:background="?android:attr/listDivider" android:layout_height="1px" android:layout_width="fill_parent"></View>
</LinearLayout>
